# page-summarizer

./: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
