[tool.poetry]
name = "page-summarizer"
version = "0.1.0"
description = "A command-line tool to summarize web pages, PDFs, and YouTube videos."
authors = ["Anthony Scotti"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.31.0"
python-dotenv = "1.0.1"
langchain = "0.1.5"
langchain-openai = "0.0.5"
openai = "1.11.1"
html2text = "2020.1.16"
youtube-transcript-api = "0.6.2"
pypdf = "4.0.1"

[tool.poetry.dev-dependencies]
ruff = "0.2.1"

[tool.ruff]
lint.select = ["E", "F", "Q", "I"]
lint.ignore = ["E501"]
